// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Articles A11y I can see the skip to content link 1`] = `"Skip to content"`;

exports[`Canonical Articles Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598286&amp;s2=64&amp;p=news.articles.c5jje4ejkqvo.page&amp;x1=[urn:bbc:optimo:c5jje4ejkqvo]&amp;x2=[responsive]&amp;x3=[news]&amp;x4=[en-gb]&amp;x7=[article]&amp;x8=[simorgh-nojs]&amp;x9=[The+Germans+solving+rising+rents+with+people+power]&amp;x11=[2019-03-27T16:13:36.863Z]&amp;x12=[2019-03-27T16:20:33.751Z]\\"/>"`;

exports[`Canonical Articles Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/news"`;

exports[`Canonical Articles Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. The BBC is not responsible for the content of external sites. Read about our approach to external linking."`;

exports[`Canonical Articles Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News",
  "url": "/news",
}
`;

exports[`Canonical Articles Footer Link should match text and url 2`] = `
Object {
  "text": "Why you can trust the BBC",
  "url": "https://www.bbc.com/news/help-41670342",
}
`;

exports[`Canonical Articles Footer Link should match text and url 3`] = `
Object {
  "text": "Terms of Use",
  "url": "https://www.bbc.com/terms",
}
`;

exports[`Canonical Articles Footer Link should match text and url 4`] = `
Object {
  "text": "About the BBC",
  "url": "https://www.bbc.co.uk/aboutthebbc/",
}
`;

exports[`Canonical Articles Footer Link should match text and url 5`] = `
Object {
  "text": "Privacy Policy",
  "url": "https://www.bbc.com/privacy/",
}
`;

exports[`Canonical Articles Footer Link should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Articles Footer Link should match text and url 7`] = `
Object {
  "text": "Accessibility Help",
  "url": "https://www.bbc.com/accessibility/",
}
`;

exports[`Canonical Articles Footer Link should match text and url 8`] = `
Object {
  "text": "Contact the BBC",
  "url": "https://www.bbc.com/contact/",
}
`;

exports[`Canonical Articles Footer Link should match text and url 9`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`Canonical Articles Footer Link should match text and url 10`] = `
Object {
  "text": "Read about our approach to external linking.",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`Canonical Articles Header I can see the branding 1`] = `"BBC News"`;

exports[`Canonical Articles Header Navigation link should match text and url 1`] = `
Object {
  "text": "Home",
  "url": "/news",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 2`] = `
Object {
  "text": "UK",
  "url": "/news/uk",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 3`] = `
Object {
  "text": "World",
  "url": "/news/world",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 4`] = `
Object {
  "text": "Business",
  "url": "/news/business",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 5`] = `
Object {
  "text": "Politics",
  "url": "/news/politics",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 6`] = `
Object {
  "text": "Tech",
  "url": "/news/technology",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 7`] = `
Object {
  "text": "Science",
  "url": "/news/science_and_environment",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 8`] = `
Object {
  "text": "Health",
  "url": "/news/health",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 9`] = `
Object {
  "text": "Family & Education",
  "url": "/news/education",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 10`] = `
Object {
  "text": "Entertainment & Arts",
  "url": "/news/entertainment_and_arts",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 11`] = `
Object {
  "text": "Stories",
  "url": "/news/stories",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 12`] = `
Object {
  "text": "Video & Audio",
  "url": "/news/video_and_audio/headlines",
}
`;

exports[`Canonical Articles I can see an image with a caption 1`] = `"https://ichef.bbci.co.uk/news/640/cpsdevpb/e49c/test/a0b28560-50a9-11e9-8100-2defb9ff0749.jpg"`;

exports[`Canonical Articles I can see an image with a caption 2`] = `"Image caption, The residents of Ligsalz8 believe they have found the answer to the expensive cost of renting in Munich"`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/news/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Articles SEO Canonical link 1`] = `"http://localhost:7080/news/articles/c5jje4ejkqvo"`;

exports[`Canonical Articles SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Articles SEO FB admins 1`] = `"100004154058350"`;

exports[`Canonical Articles SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Articles SEO Heading level 1 1`] = `"The Germans solving rising rents with people power"`;

exports[`Canonical Articles SEO Lang attribute 1`] = `"en-gb"`;

exports[`Canonical Articles SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "Article",
      "author": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png",
          "width": 1024,
        },
        "name": "BBC News",
        "noBylinesPolicy": "https://www.bbc.com/news/help-41670342#authorexpertise",
      },
      "dateModified": "2019-03-27T16:20:33.751Z",
      "datePublished": "2019-03-27T16:13:36.863Z",
      "headline": "The Germans solving rising rents with people power",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/news/articles/c5jje4ejkqvo",
        "@type": "WebPage",
        "name": "The Germans solving rising rents with people power",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png",
          "width": 1024,
        },
        "name": "BBC News",
        "publishingPrinciples": "https://www.bbc.com/news/help-41670342",
      },
      "thumbnailUrl": "https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png",
      "url": "http://localhost:7080/news/articles/c5jje4ejkqvo",
    },
  ],
}
`;

exports[`Canonical Articles SEO OG description 1`] = `"The Germans solving rising rents with people power"`;

exports[`Canonical Articles SEO OG image 1`] = `"https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png"`;

exports[`Canonical Articles SEO OG image alt 1`] = `"BBC News"`;

exports[`Canonical Articles SEO OG locale 1`] = `"en_GB"`;

exports[`Canonical Articles SEO OG site name 1`] = `"BBC News"`;

exports[`Canonical Articles SEO OG title 1`] = `"The Germans solving rising rents with people power - BBC News"`;

exports[`Canonical Articles SEO OG type 1`] = `"article"`;

exports[`Canonical Articles SEO OG url 1`] = `"http://localhost:7080/news/articles/c5jje4ejkqvo"`;

exports[`Canonical Articles SEO Page title 1`] = `"The Germans solving rising rents with people power - BBC News"`;

exports[`Canonical Articles SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`Canonical Articles SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Articles SEO Twitter creator 1`] = `"@BBCNews"`;

exports[`Canonical Articles SEO Twitter description 1`] = `"The Germans solving rising rents with people power"`;

exports[`Canonical Articles SEO Twitter image alt 1`] = `"BBC News"`;

exports[`Canonical Articles SEO Twitter image src 1`] = `"https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png"`;

exports[`Canonical Articles SEO Twitter site 1`] = `"@BBCNews"`;

exports[`Canonical Articles SEO Twitter title 1`] = `"The Germans solving rising rents with people power - BBC News"`;
